<resources>
    <string name="app_name">GEM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="main_hall">Main Hall\nopen today untill 6:00PM</string>
    <string name="main_hall_title">MAIN HALL</string>
    <string name="main_hall_opened">Open seven days</string>
    <string name="main_hall_openedTime">
        <item>Sunday - Thursday : 10:00AM - 6:00PM</item>
        <item>\nFirday and Saturday: 10:00AM - 6:00PM</item>
    </string>
    <string name="main_hall_vacations">
        <item>Closed Prophet Mohammed\'s Birthday</item>
        <item>\nThursday, November 30,2017</item>
    </string>
    <string name="main_hall_location">
        <item>Alexandria Desert Rd, Kafr Nassar</item>
        <item>\nAl Haram, Giza Governante</item>
        <item>\n+202 3377 68 96</item>
    </string>
    <string name="second_hall">Main 2\nopen today untill 6:00PM</string>
    <string name="second_hall_title">MAIN HALL</string>
    <string name="second_hall_opened">Open seven days</string>
    <string name="second_hall_openedTime">
        <item>Sunday - Thursday : 10:00AM - 6:00PM</item>
        <item>\nFirday and Saturday: 10:00AM - 6:00PM</item>
    </string>
    <string name="second_hall_vacations">
        <item>Closed Prophet Mohammed\'s Birthday</item>
        <item>\nThursday, November 30,2017</item>
    </string>
    <string name="second_hall_location">
        <item>Alexandria Desert Rd, Kafr Nassar</item>
        <item>\nAl Haram, Giza Governante</item>
        <item>\n+202 3377 68 96</item>
    </string>
    <string name="third_hall">Main 3\nopen today untill 6:00PM</string>
    <string name="third_hall_title">MAIN HALL</string>
    <string name="third_hall_opened">Open seven days</string>
    <string name="third_hall_openedTime">
        <item>Sunday - Thursday : 10:00AM - 6:00PM</item>
        <item>\nFirday and Saturday: 10:00AM - 6:00PM</item>
    </string>
    <string name="third_hall_vacations">
        <item>Closed Prophet Mohammed\'s Birthday</item>
        <item>\nThursday, November 30,2017</item>
    </string>
    <string name="third_hall_location">
        <item>Alexandria Desert Rd, Kafr Nassar</item>
        <item>\nAl Haram, Giza Governante</item>
        <item>\n+202 3377 68 96</item>
    </string>
    <string name="fourth_hall">Main 4\nopen today untill 6:00PM</string>
    <string name="fourth_hall_title">MAIN HALL</string>
    <string name="fourth_hall_opened">Open seven days</string>
    <string name="fourth_hall_openedTime">
        <item>Sunday - Thursday : 10:00AM - 6:00PM</item>
        <item>\nFirday and Saturday: 10:00AM - 6:00PM</item>
    </string>
    <string name="fourth_hall_vacations">
        <item>Closed Prophet Mohammed\'s Birthday</item>
        <item>\nThursday, November 30,2017</item>
    </string>
    <string name="fourth_hall_location">
        <item>Alexandria Desert Rd, Kafr Nassar</item>
        <item>\nAl Haram, Giza Governante</item>
        <item>\n+202 3377 68 96</item>
    </string>
    <string name="highlights_must_see">The Must-Sees</string>
    <string name="highlights_must_see_items">Browse few of the GEM\'s most\ncompelling works\n</string>
    <string name="highlights_family_favorites">\nFamily Favorites</string>
    <string name="highlights_family_favorites_items">You may want to check some\nof the most family vaforites\n</string>
    <string name="artifact_related_videos">VIDEOS</string>
    <string name="artifact_related_photos">PHOTOS</string>
    <string name="artifact_related_connections">CONNECTIONS</string>
    <string name="artifact_title_1">TUT ANKAMUN MASK</string>
    <string name="artifact_info_1">This mask of Tutankhamun is an example of the high est artistic and technical achievements of the an-cient Egyptians in the New Kingdom.
        \nCovering the head of the wrapped mummy in its coffin and activated by a magical spell, no.151b from the Book of the Dead, the mask ensured more pro-tection for the king\'s body.
        \nThe exact portrayal of the king\'s facial features achieved here made it possible for his soul to recog nize him and return to his mummified body, thus en uring his resurrection.
        \nhe head is covered by the royal headdress and the forehead bears the emblems of kingship and protec tion: the vulture and uraeus, or cobra.
        \nThe gold sheets used in this wonderful mask are joinec together by heating and hammering. The eyes are of obsidian and quartz and the eyebrows and eyelids are inlaid with lapis lazuli. The broad inlaid collar of semiprecious stones and colored glass ends in falcon heads.
        \nDimensions: Height 54 cm Width 39.3 cm</string>
    <string name="artifact_title_2">Sphinx of Amenhotep the Second</string>
    <string name="artifact_info_2">A sphinx has the body and strength of a lion and the head or face of a man, symbolizing wisdom and intelligence.
        \nThe ancient Egyptians sculpted different kinds of sphinxes with a human head, a ram head, or a human face with the mane of a lion. Sphinxes represent various deities, especially Amun-Re, identified with the kings who reigned when the sphinxes were made. 
        \nThe human heads or faces usually have the facial features of these kings. This sphinx portrays King Amenhotep the Second.
    </string>
    <string name="artifact_title_3">Anubis Carrying the Moon Disk</string>
    <string name="artifact_info_3">Anubis, the black jackal, was the animal that personified the deity who was believed to protect the cemetery, and thus became the patron deity of mummification. Anubis was depicted in funerary scenes guiding the deceased to Osiris in the court of justice. Embalmers performing the mummification of the corpses wore jackal masks.
        \nIn the legend of the divine birth of Queen Hatshepsut and King Amenhotep the third, Anubis is represented rolling or bringing the disk of the moon and wishing the young royal children long life. In modern times, ceremonies performed on the seventh day of a child\'s birth contain a step, in which the newly born child is put in a sieve and is shaken and asked to "obey his mother and not to obey his father."
        \nthis cartonnage piece, the jackal-headed god comes, carrying the disk of the moon, and wishing the deceased long life. He wears a gilded collar, an unusual short kilt with a long tail hanging from the front and sandals. A long, wide white drapery hangs from behind and reaches the feet.
        \nDimensions:  Width 13.5 cm  Height 33.5 cm
    </string>
    <string name="artifact_title_4">Shawabti of Tutankhamun</string>
    <string name="artifact_info_4">The Shawabti, or funerary, figures were intended to perform work in the place of the deceased in the afterlife. They were usually made of faience, wood, or pottery and were various sizes.
        \nThey were divided according to their functions and to the Egyptian calendar as follows: 365 workmen, each for one day of the year, and 36 overseers, each as a chief of a week of ten days or ten workers. In the tomb of Tutankhamun, 12 supplementary foremen were added, one for each month, totaling 413.
        \nThis Shawabti of gilded wood is an image of the young king wearing the Khepresh crown of ceremonies and processions and the uraeus. It is adorned with a broad collar cut in gold leaf and the two insignia of Osiris.
    </string>
    <string name="artifact_title_5">Crocodile God Sobek</string>
    <string name="artifact_info_5">The River Nile and the canals were the main roads of ancient Egypt, although sailing was a great risk because of the crocodiles and hippopotami. Egyptians, therefore, wanted to ward off the danger from crocodiles. They built temples for the cult of the crocodile god Sobek at Esna, Kom Ombo, the Faiyum region, and other places. Each temple had a pool or small underground chambers, in which a live crocodile was kept to receive the offerings and prayers.
        \nSobek was associated with the sun god Re. In the Book of the Dead, spells were compiled for the deceased person "for driving off the crocodile that comes to take away the deceased\'s magic from him in the realm of the dead" (spell 31).
        \nThis statue was placed in one of the god\'s temples by a pious worshipper. It was easy to pray and place offerings in front of the statue. The figure, together with the base, was cut from a single block. The mouth is closed, and the details of the body were carved in relief, crossed and striped. Few details, however, can be seen on the figure.
        \nDimensions:  Length 9 cm  Height 6.5 cm
    </string>
    <string name="artifact_title_6">Goddess Isis Nursing Her Son Horus</string>
    <string name="artifact_info_6">Isis was the wife of the god Osiris and mother of the falcon god Horus. The divine triad was one of the most important and famous groups of deities in ancient Egypt. Isis was often represented nursing her son Horus and became the symbol of motherhood and protection. She was also the goddess of charm and protected people from evil and from magic.
        \nThis is a statue of the goddess carrying the child Horus and nursing him in a symbolic way. In this form, she was also identified with the cow Hathor, the mother goddess. There is a similarity between the statues of Isis nursing her son Horus and the later Christian images of the Madonna and Child. On the goddess\'s head are the two horns of the cow Hathor with the sun disk between them.
        \nDimensions:  Height 32 cm
    </string>
    <string name="artifact_title_7">Outer Coffin of Queen Meritamun</string>
    <string name="menu_collections">COLLECTIONS</string>
    <string name="menu_shop">SHOP</string>
    <string name="menu_quiz">QUIZ</string>
    <string name="menu_membership">MEMBERSHIP</string>
    <string name="menu_getTicket">GET TICKET</string>
    <string name="menu_ar">AUGMENTED REALITY</string>
    <string name="menu_favourites">FAVOURITES</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="shopping_details_title">Details</string>
    <string name="shopping_details_orderBtn">Order</string>
    <string name="shopping_details_price">PRICE : $18</string>
    <string name="shopping_details_info">A T-shirt (or t shirt, or tee) is a style of unisex fabric shirt named after the T shape of its body and sleeves. It normally has short sleeves and a round neckline, known as a crew neck, which lacks a collar. T-shirts are generally made of a light, inexpensive fabric and are easy to clean.</string>
    <string name="login">LOGIN</string>
    <string name="username">User Name</string>
    <string name="Password">Password </string>
    <string name="forget_password">Forget your password</string>
    <string name="featured_event1_time">DEC 05</string>
    <string name="featured_event1_topic">Ancient Egyptian Art</string>
    <string name="featured_event1_note">Guided Tour</string>
    <string name="featured_event2_time">DEC 10</string>
    <string name="featured_event2_topic">Music in Old Egypt</string>
    <string name="featured_event2_note">Guided Tour</string>
    <string name="featured_event3_time">DEC 15</string>
    <string name="featured_event3_topic">King Khufu Tour</string>
    <string name="featured_event3_note">Guided Tour</string>
    <string name="featured_event4_time">DEC 18</string>
    <string name="featured_event4_topic">King Tutankhamun Tour</string>
    <string name="featured_event4_note">Guided Tour</string>
    <string name="tour_activity_title">TOUR PLANNING</string>
</resources>