<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/collections_menu"
            android:title="@string/menu_collections" />
        <item
            android:id="@+id/shop_menu"
            android:title="@string/menu_shop" />
        <item
            android:id="@+id/quiz_menu"
            android:title="@string/menu_quiz" />
        <item
            android:id="@+id/membership_menu"
            android:title="@string/menu_membership" />
        <item
            android:id="@+id/tour_menu"
            android:title="@string/tour_activity_title" />
        <item
            android:id="@+id/ticket_menu"
            android:title="@string/menu_getTicket" />
        <item
            android:id="@+id/AR_menu"
            android:title="@string/menu_ar" />
        <item
            android:id="@+id/Favourite_menu"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/logout_menu"
            android:title="@string/menu_logout" />


    </group>
<!--
    <item android:title="">
        <menu>
            <item
                android:id="@+id/tour_menu"
                android:title="My Tour" />
            <item
                android:id="@+id/ticket_menu"
                android:title="Get Ticket" />

        </menu>
    </item>

-->

</menu>
