<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_shopping_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="brainwaves.gem.HelperMenu.shoppingDetailsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/shopping_details_title"
            android:textStyle="bold"
            android:layout_margin="18dp"
            android:textSize="20dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="18dp"
            android:src="@drawable/shop_women_iii"
            android:id="@+id/shopping_detailsImg"
            android:background="@null"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/shopping_details_orderBtn"
                android:onClick="shoppingCheckout"
                android:textColor="#ffffff"
                android:background="#32CD32"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/shopping_details_price"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="18dp"
            android:text="@string/shopping_details_info"
            android:textSize="18dp"/>
    </LinearLayout>

</ScrollView>
