<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageColor3"
    android:padding="0dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/featured_event1_time"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="7"
                    >



                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/member_shape3"
                        android:scaleType="fitStart"
                        android:adjustViewBounds="true"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/featured_event1_topic"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="10dp"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/featured_event1_note"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/today_event_seprator_margin_top"
                        android:layout_marginBottom="5dp"
                        android:background="@android:color/darker_gray"
                        />

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/featured_event2_time"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="7"
                    >



                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/featured_shape2"
                        android:scaleType="fitStart"
                        android:adjustViewBounds="true"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/featured_event2_topic"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="10dp"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/featured_event2_note"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/today_event_seprator_margin_top"
                        android:layout_marginBottom="5dp"
                        android:background="@android:color/darker_gray"
                        />

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/featured_event3_time"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="7"
                    >



                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/featured_shape3"
                        android:scaleType="fitStart"
                        android:adjustViewBounds="true"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/featured_event3_topic"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="10dp"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/featured_event3_note"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/today_event_seprator_margin_top"
                        android:layout_marginBottom="5dp"
                        android:background="@android:color/darker_gray"
                        />

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/featured_event4_time"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="7"
                    >



                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/featured_shape4"
                        android:scaleType="fitStart"
                        android:adjustViewBounds="true"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/featured_event4_topic"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_marginBottom="10dp"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/featured_event4_note"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/today_event_seprator_margin_top"
                        android:layout_marginBottom="5dp"
                        android:background="@android:color/darker_gray"
                        />

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>






        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/featured_next_button"
            android:adjustViewBounds="true"
            android:background="@color/cardview_light_background"
            android:scaleType="fitXY"/>

    </LinearLayout>

</ScrollView>